tests/NormalTests/paczka1/fuzzy1/32405206.err
Error in line 8: wxthYb1dV8 S111 79,9
Error in line 15: wxthYb1dV8 A819 72,3
Error in line 16: jh0YIMnN S111 78,2
Error in line 28: y5dRDgM S455 70,3
Error in line 36: y5dRDgM S236 74,7
